[package]
name = "rcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.1", features = ["derive"] }
log = "0.4.20"
env_logger= "0.11.2"

serde_json = "1.0.108"

prettytable-rs = "^0.10"
byte-unit = "4.0.19"
openssl = { version = "0.10", features = ["vendored"] }

chrono = "0.4.31"
time = "0.1"

