[package]
name = "rcache"
version = "0.0.6"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["derive"] }
byte-unit = "5.1.6"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
prettytable-rs = "^0.10"
serde_json = "1.0.142"
skiplist = "0.6.0"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
[target.'cfg(not(windows))'.dependencies]
fork = "0.2.0"
